--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.7.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "js-file-download": "^0.4.12",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-bootstrap-icons": "^1.4.0",
