--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "@testing-library/user-event": "^12.7.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "js-file-download": "^0.4.12",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-bootstrap-icons": "^1.4.0",
+    "react-bootstrap-typeahead": "^5.1.4",
     "react-dom": "^17.0.1",
-    "react-images": "1.1.7",
-    "react-photo-gallery": "8.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
