--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "js-file-download": "^0.4.12",
     "react": "^17.0.1",
+    "react-awesome-lightbox": "^1.8.0",
     "react-bootstrap": "^1.5.0",
     "react-bootstrap-icons": "^1.4.0",
     "react-bootstrap-typeahead": "^5.1.4",
