--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap-icons": "^1.4.0",
     "react-bootstrap-typeahead": "^5.1.4",
     "react-dom": "^17.0.1",
+    "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
